Implement minimum security improvements for auth
- Add client-side password hashing with PBKDF2 (10k iterations)
- Server never sees plaintext passwords anymore
- Fix timing attack vulnerability with constant-time comparison
- Add email validation
- Use crypto-js for browser-compatible hashing
- Passwords are now double-hashed (client + server)
- Fix flaky tests with proper wait conditions

Security improvements:
- Passwords hashed on client before transmission
- Timing-safe password verification
- Double hashing provides defense in depth

--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
 	"dependencies": {
 		"@convex-dev/auth": "^0.0.88",
 		"@types/bcryptjs": "^2.4.6",
-		"bcryptjs": "^3.0.2"
+		"@types/crypto-js": "^4.2.2",
+		"bcryptjs": "^3.0.2",
+		"crypto-js": "^4.2.0"
 	}
 }
